Fixed Health UI

--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -18,7 +18,7 @@
           <div class="resource-content flexrow flex-center flex-between">
           <input type="text" name="data.health.value" value="{{data.health.value}}" data-dtype="Number"/>
           <span> / </span>
-          <input type="text" disabled="false" name="data.hpMax" value="{{data.hpMax}}" data-dtype="Number"/>
+          <input type="text" name="data.health.max" value="{{data.health.max}}" data-dtype="Number"/>
           </div>
         </div>
 
@@ -27,7 +27,7 @@
           <div class="resource-content flexrow flex-center flex-between">
           <input type="text" name="data.essence.value" value="{{data.essence.value}}" data-dtype="Number"/>
           <span> / </span>
-          <input type="text" disabled="false" name="data.essMax" value="{{data.essMax}}" data-dtype="Number"/>
+          <input type="text" name="data.essence.max" value="{{data.essence.max}}" data-dtype="Number"/>
           </div>
         </div>
 
