Character Sheet Testing

--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -19,7 +19,14 @@
           <input type="text" name="data.health.value" value="{{data.health.value}}" data-dtype="Number"/>
           <span> / </span>
           <input type="text" name="data.health.max" value="{{data.health.max}}" data-dtype="Number"/>
-          </div>
+		  </div>
+		  
+		 <div class="grid-3col">
+			<label for="data.hpMax" class="resource-label">Max Health</label>
+			<input type="text" disabled="true" name="data.hpMax" value="{{data.hpMax}}" data-dtype="Number"/>
+		  </div>
+
+		  
         </div>
 
         <div class="resource flex-group-center">
@@ -29,6 +36,13 @@
           <span> / </span>
           <input type="text" name="data.essence.max" value="{{data.essence.max}}" data-dtype="Number"/>
           </div>
+		  
+		  <div class="grid-3col">
+			<label for="data.essMax" class="resource-label">Max Essence</label>
+			<input type="text" disabled="true" name="data.essMax" value="{{data.essMax}}" data-dtype="Number"/>
+		  </div>
+		  
+		  
         </div>
 
         <div class="resource flex-group-center">
